reformat & update repo structure
Now uses defaults & settings tracked in: https://github.com/Okeanos/template-repository

- use standardized config layouts etc. and build on defined extension points
- remove entries in editorconfig in favor of more specific linters (Markdown)
- remove unnecessary entries from gitignore
- properly configure markdownlint-cli2, yamllint to ignore "gitignore" tracked files
- use [mise-en-place](https://mise.jdx.dev) to define some tools used to work with this repository
- add schema definitions for files where possible
- …

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://json.schemastore.org/mkdocs-1.6.json
 site_name: MkDocs GitHub Pages demo
 site_description: This shows how to use GitHub Actions to build and publish GitHub Pages using MkDocs.
 site_author: Nikolas Grottendieck
