--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,10 +1,12 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
+# https://docs.github.com/en/actions/writing-workflows
 name: Publish Pages
 
+# yamllint disable-line rule:truthy
 on:
   push:
     branches:
       - main
-
   workflow_dispatch:
 
 # Allow one concurrent deployment
@@ -25,10 +27,15 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+      - name: Extract Tool Versions
+        id: tool-versions
+        run: |
+          python_version=$(grep -F 'python' .mise.toml | cut -d '=' -f2 | xargs)
+          echo "python_version=${python_version}" >> "$GITHUB_OUTPUT"
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version-file: '.python-version'
+          python-version: ${{ steps.tool-versions.outputs.python_version }}
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
