--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -1,5 +1,4 @@
-# yamllint disable-line rule:line-length
-# yaml-language-server: $schema=https://raw.githubusercontent.com/DavidAnson/markdownlint-cli2/main/schema/markdownlint-cli2-config-schema.json
+# yaml-language-server:$schema=https://raw.githubusercontent.com/DavidAnson/markdownlint-cli2/main/schema/markdownlint-cli2-config-schema.json
 
 # Configures how the linter (markdownlint-cli2) behaves when linting
 
@@ -7,5 +6,7 @@
 gitignore: true
 
 ignores:
+  # handling GitHub issue templates is out of scope for now because of their special syntax
+  - .github/ISSUE_TEMPLATE/*.md
   # Should be validated (because it is obviously Markdown) but don't have the time for that right now
   - docs
